crates/cli/tests/snapshots/empty_attrset_merge__fix_2b12aac78f3eb3f947064b9cf3011ec5ac2e10a050c1dadf25a62e9ede0df00b.snap
---
source: crates/cli/tests/empty_attrset_merge.rs
expression: "\"{ a = 1; } // {}\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ a = 1; } // {}
+{ a = 1; }
