crates/cli/tests/snapshots/empty_attrset_merge__fix_6fb4222cca7ed756b0a739c6a2cf8e1b3d6e86717d6c2b0bf1f0ee6248dc57e5.snap
---
source: crates/cli/tests/empty_attrset_merge.rs
expression: "\"{} // { a = 1; }\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{} // { a = 1; }
+{ a = 1; }
