crates/cli/tests/snapshots/empty_attrset_merge__lint_2b12aac78f3eb3f947064b9cf3011ec5ac2e10a050c1dadf25a62e9ede0df00b.snap
---
source: crates/cli/tests/empty_attrset_merge.rs
expression: "\"{ a = 1; } // {}\""
---
[W26] Warning: Unnecessary merge with empty attrset
   ╭─[<temp_file_path>:1:1]
   │
 1 │ { a = 1; } // {}
   · ────────┬───────  
   ·         ╰───────── Merging with an empty attrset {} is a no-op
───╯
